Massive restructuring of files for making package dependencies simpler. The package org.lisoft.lsml.mwo_data no longer depends on other packages.